# pecoc

./: .gitignore  LICENSE  README.md  pyproject.toml
pecoc/: __init__.py  colorinator.py  pecoc.py
pecoc/glyph/: __init__.py  cello.py  loader.py
pecoc/glyph/cgo/: base.py  primitives.py
